# PLoS-cities-complex-systems

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
data/: figure_count_aoi.geojson
data/unweaver/: cost-dynamic.py  cost-wheelchair.py  directions-wheelchair.py  profile-cane.json  profile-dynamic.json  profile-electric.json  profile-flexible.json  profile-walk.json  profile-wheelchair.json
data_notebooks/: 000 - Extract Seattle Area OpenStreetMap.ipynb  000 - Extract Seattle-area landmass polygons.ipynb  010 - Building the graph.ipynb  100 - Extracting Facilities.ipynb  120 - Labeling facility edges.ipynb  140 - Counts.ipynb  200 - Betweenness.ipynb
figure_notebooks/: 010 - Fig1.ipynb  030 - Fig3.ipynb  040 - Fig4.ipynb  050 - Fig5.ipynb
qgis/: betweenness.qgz  facilities_count.qgz
reach_metrics/: .gitignore  .pre-commit-config.yaml  Dockerfile  pyproject.toml  setup.py
reach_metrics/reach_metrics/: __init__.py  __main__.py  build.py  cli.py  network_container.py  reach_metrics.py  reach_metrics_batch.py
