[tool.poetry]
name = "pedestrian_reach_code"
version = "0.1.0"
description = ""
authors = ["Nick Bolten <bolten@uw.edu>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
jupyter = {extras = ["all"], version = "^1.0.0"}
numpy = "^1.20.1"
geopandas = "^0.9.0"
shapely = "^1.7.1"
rtree = "^0.9.7"
entwiner = {git = "https://github.com/nbolten/entwiner.git", rev = "a3f6c33"}
unweaver = {git = "https://github.com/nbolten/unweaver.git", rev = "656c9be"}
plotnine = "0.6.0"
osmium = "^3.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
